Actualizo imagenes y agrego tick de boostrap

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clon de Whatsapp</title>
+  <title>proyecto-base-999200928</title>
   <link rel="stylesheet" href="./styles/main.css">
 
   <!-- google fonts -->
@@ -19,8 +19,8 @@
     <aside>
       <header>
         <div class="profile">
-          <img src="https://github.com/gabrielalberini.png" alt="foto de perfil">
-          <h2>Gabriel Alberini</h2>
+          <img src="https://avatars.githubusercontent.com/u/246106995?v=4" alt="foto de perfil">
+          <h2>Leonardo Maydana</h2>
         </div>
         <div class="actions">
           <button>
@@ -54,14 +54,26 @@
       <section class="chats">
         <ul>
           <li class="user-chat">
-            <img src="https://placehold.co/100x100" alt="foto de perfil de maría lópez">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_4Uxp9EWg0qTCJVs6efAjd85UpcL9nfBuOQ&s" alt="foto de perfil de cristiano ronaldo">
+            <div>
+              <h3>Cristiano Ronaldo</h3>
+              <p>¿Nos vemos a las 18?</p>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="ticks" viewBox="0 0 16 16">
+                <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
+                <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/>
+              </svg>
+
+                </div>
+
+              <li class="user-chat">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi8TXJkgQs3Noie3UfxUws1i6w7DKb_GXiiA&s" alt="foto de perfil de maría lópez">
             <div>
               <h3>María López</h3>
               <p>¿Nos vemos a las 18?</p>
-            </div>
+            
           </li>
           <li class="user-chat">
-            <img src="https://placehold.co/100x100" alt="foto de perfil de maría lópez">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSu_sO2GJz7yxgODGnloO5WMSyBnz0KK0YQCA&s" alt="foto de perfil de maría lópez">
             <div>
               <h3>Grupo: Proyecto</h3>
               <p>Push a main — revisión</p>
