--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 </head>
-
+<!-- cabecera perfil -->
 <body>
   <section class="app">
     <aside>
@@ -22,7 +22,7 @@
           <img src="https://avatars.githubusercontent.com/u/246106995?v=4" alt="foto de perfil">
           <h2>Leonardo Maydana</h2>
         </div>
-
+        <!-- botones derecha del perfil -->
         <div class="actions">
           <button>
             <svg xmlns="http://www.w3.org/2000/svg" width="128" viewBox="0 0 20 20">
@@ -49,21 +49,21 @@
           </button>
         </div>
       </header>
-
+      <!-- Barra de busqueda/navegacion -->
       <div class="search">
         <form>
           <input type="search" placeholder="Buscar un chat o iniciar uno nuevo">
         </form>
       </div>
-
+      <!-- seccion de chats aside -->
       <section class="chats">
         <ul>
           <li class="user-chat">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_4Uxp9EWg0qTCJVs6efAjd85UpcL9nfBuOQ&s" alt="foto de perfil de cristiano ronaldo">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_4Uxp9EWg0qTCJVs6efAjd85UpcL9nfBuOQ&s" alt="foto de perfil de Jose Hernandez">
 
             <div class="user-info">
-              <h2>Jose Hernandez</h2>
-              <p> Nos vemos a las 18?
+              <h3>Jose Hernandez</h3>
+              <p> Abri el server
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="user-ticks" viewBox="0 0 16 16">
               <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
               <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/>
@@ -87,11 +87,10 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSu_sO2GJz7yxgODGnloO5WMSyBnz0KK0YQCA&s" alt="foto de perfil de maría lópez">
 
             <div class="user-info">
-              <h3>Grupo: Proyecto</h3>
-              <p>Push a main — revisión ajsdj
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="user-ticks" viewBox="0 0 16 16">
-              <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
-              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/>
+              <h3>Grupo: Los panas</h3>
+              <p>Van a jugar CS o no?
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="green" class="bi bi-3-circle-fill" viewBox="0 0 16 16">
+              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-8.082.414c.92 0 1.535.54 1.541 1.318.012.791-.615 1.36-1.588 1.354-.861-.006-1.482-.469-1.54-1.066H5.104c.047 1.177 1.05 2.144 2.754 2.144 1.653 0 2.954-.937 2.93-2.396-.023-1.278-1.031-1.846-1.734-1.916v-.07c.597-.1 1.505-.739 1.482-1.876-.03-1.177-1.043-2.074-2.637-2.062-1.675.006-2.59.984-2.625 2.12h1.248c.036-.556.557-1.054 1.348-1.054.785 0 1.348.486 1.348 1.195.006.715-.563 1.237-1.342 1.237h-.838v1.072h.879Z"/>
               </svg></p>
             </div>
           </li>
@@ -101,11 +100,7 @@
 
             <div class="user-info">
               <h3>Soporte</h3>
-              <p>Tu factura está lista
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="user-ticks" viewBox="0 0 16 16">
-              <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
-              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/>
-              </svg></p>
+              <p>Tu factura está lista</p>
             </div>
           </li>
 
@@ -113,9 +108,9 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi8TXJkgQs3Noie3UfxUws1i6w7DKb_GXiiA&s" alt="foto de perfil de Enzo Aguirre">
 
             <div class="user-info">
-              <h3>Enzo Aguirre</h3>
-              <p>¿Nos vemos a las 18?
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="user-ticks" viewBox="0 0 16 16">
+              <h3>Eustaquio Habichuelas</h3>
+              <p>Amigo sale un roblox?
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="user-ticks" viewBox="0 0 16 16">
               <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
               <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/>
               </svg></p>
@@ -125,27 +120,26 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi8TXJkgQs3Noie3UfxUws1i6w7DKb_GXiiA&s" alt="foto de perfil de Enzo Aguirre">
 
             <div class="user-info">
-              <h3>Enzo Aguirre</h3>
-              <p>¿Nos vemos a las 18?
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="user-ticks" viewBox="0 0 16 16">
-              <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
-              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/>
+              <h3>Justo Bolsa</h3>
+               <p>Mi perro se comio mi barra de chocolate
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+                <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
               </svg></p>
           </li>
-          
+
         </ul>
       </section>
     </aside>
-
+    <!-- cabecera texto principal -->
     <div class="chat-panel">
       <header class="chat-header">
         <img src="https://placehold.co/100x100" alt="foto de perfil">
         <div>
-          <h3>María López</h3>
+          <h3>Jose Hernandez</h3>
           <p>en linea</p>
         </div>
       </header>
-
+      <!-- mensajes principal -->
       <section class="messages">
         <div class="message">
           <p class="content">¡Hola! ¿Querés venir por un café?</p>
@@ -177,7 +171,7 @@
           <p class="time">14:13</p>
         </div>
       </section>
-
+      <!-- footer texto principal -->
       <footer>
         <button id="btn-attach" class="attach">
           <svg xmlns="http://www.w3.org/2000/svg" width="131.11" height="128" viewBox="0 0 718 701">
