--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
           </button>
         </div>
       </header>
-      <!-- Barra de busqueda/navegacion -->
+      <!-- Barra de busqueda/navegacion: listo-->
       <div class="search">
         <form>
           <input type="search" placeholder="Buscar un chat o iniciar uno nuevo">
         </form>
       </div>
-      <!-- seccion de chats aside -->
+      <!-- seccion de chats aside: listo -->
       <section class="chats">
         <ul>
           <li class="user-chat">
@@ -63,11 +63,9 @@
 
             <div class="user-info">
               <h3>Jose Hernandez</h3>
-              <p> Abri el server
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="user-ticks" viewBox="0 0 16 16">
+              <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" fill="#00d9ff" class="user-ticks" viewBox="0 0 15 12">
               <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
-              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/>
-              </svg></p>
+              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/></svg> Ya estoy, abri el server</p>
             </div>
           </li>
 
@@ -76,27 +74,25 @@
 
             <div class="user-info">
               <h3>Enzo Aguirre</h3>
-              <p>¿Nos vemos a las 18?
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="user-ticks" viewBox="0 0 16 16">
+              <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" fill="#00d9ff" class="user-ticks" viewBox="0 0 15 12">
               <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
-              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/>
-              </svg></p>
+              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/></svg> ¿Nos vemos a las 18?</p>
           </li>
 
           <li class="user-chat">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSu_sO2GJz7yxgODGnloO5WMSyBnz0KK0YQCA&s" alt="foto de perfil de maría lópez">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSu_sO2GJz7yxgODGnloO5WMSyBnz0KK0YQCA&s" alt="foto de perfil de Grupo: Los panas">
 
             <div class="user-info">
               <h3>Grupo: Los panas</h3>
               <p>Van a jugar CS o no?
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="green" class="bi bi-3-circle-fill" viewBox="0 0 16 16">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#04d004" class="bi bi-3-circle-fill" viewBox="0 0 16 16">
               <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-8.082.414c.92 0 1.535.54 1.541 1.318.012.791-.615 1.36-1.588 1.354-.861-.006-1.482-.469-1.54-1.066H5.104c.047 1.177 1.05 2.144 2.754 2.144 1.653 0 2.954-.937 2.93-2.396-.023-1.278-1.031-1.846-1.734-1.916v-.07c.597-.1 1.505-.739 1.482-1.876-.03-1.177-1.043-2.074-2.637-2.062-1.675.006-2.59.984-2.625 2.12h1.248c.036-.556.557-1.054 1.348-1.054.785 0 1.348.486 1.348 1.195.006.715-.563 1.237-1.342 1.237h-.838v1.072h.879Z"/>
               </svg></p>
             </div>
           </li>
 
           <li class="user-chat">
-            <img src="https://placehold.co/100x100" alt="foto de perfil de maría lópez">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvtpW9OhiJnkgH1YV_V_XWGyMJ-P22MOLZ0g&s" alt="foto de perfil de Soporte">
 
             <div class="user-info">
               <h3>Soporte</h3>
@@ -105,26 +101,23 @@
           </li>
 
           <li class="user-chat">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi8TXJkgQs3Noie3UfxUws1i6w7DKb_GXiiA&s" alt="foto de perfil de Enzo Aguirre">
+            <img src="https://i.pinimg.com/236x/0e/2e/9d/0e2e9dc33751fbf4a708c1ecbdaf2d43.jpg" alt="foto de perfil de Eustaquio Habichuelas">
 
             <div class="user-info">
               <h3>Eustaquio Habichuelas</h3>
-              <p>Amigo sale un roblox?
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="user-ticks" viewBox="0 0 16 16">
+              <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" fill="white" class="user-ticks" viewBox="0 0 15 12">
               <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
-              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/>
-              </svg></p>
+              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/></svg> Amigo sale un roblox?</p>
           </li>
 
           <li class="user-chat">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi8TXJkgQs3Noie3UfxUws1i6w7DKb_GXiiA&s" alt="foto de perfil de Enzo Aguirre">
+            <img src="https://hips.hearstapps.com/es.h-cdn.co/fotoes/images/noticias-cine/spider-man-por-que-tom-holland-es-el-hombre-arana-perfecto/65087528-1-esl-ES/Spider-Man-Por-que-Tom-Holland-es-el-hombre-arana-perfecto.jpg?resize=640:*" alt="foto de perfil de Justo Bolsa">
 
             <div class="user-info">
               <h3>Justo Bolsa</h3>
-               <p>Mi perro se comio mi barra de chocolate
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+               <p> <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 15 15">
                 <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
-              </svg></p>
+              </svg> Mi perro se comio mi barra de chocolate</p>
           </li>
 
         </ul>
@@ -133,42 +126,49 @@
     <!-- cabecera texto principal -->
     <div class="chat-panel">
       <header class="chat-header">
-        <img src="https://placehold.co/100x100" alt="foto de perfil">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_4Uxp9EWg0qTCJVs6efAjd85UpcL9nfBuOQ&s" alt="foto de perfil de Jose Hernandez">
         <div>
           <h3>Jose Hernandez</h3>
-          <p>en linea</p>
+          <p> en linea</p>
         </div>
       </header>
       <!-- mensajes principal -->
       <section class="messages">
         <div class="message">
-          <p class="content">¡Hola! ¿Querés venir por un café?</p>
+          <p class="content">¡Hola amigo estoy por jugar Minecraft! ¿Te sumas?</p>
           <p class="time">14:12</p>
         </div>
 
         <div class="message me">
-          <p class="content">Si, perfecto. ¿A las 18 te viene bien?</p>
-          <p class="time">14:13</p>
+          <p class="content">Si, dale pero recien puedo a las 15hs</p>
+          <p class="time"> 
+            14:13 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" fill="#00d9ff" class="user-ticks" viewBox="0 0 15 12">
+              <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
+              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/></svg> </p>
         </div>
 
         <div class="message">
-          <p class="content">Dale dale, en la plaza entonces 😋</p>
+          <p class="content">Dale, joya. Te escribo mas tarde entonces😎</p>
           <p class="time">14:14</p>
         </div>
 
         <div class="message me">
-          <p class="content">Si, perfecto. ¿A las 18 te viene bien?</p>
-          <p class="time">14:13</p>
+          <p class="content">Listo, buenisimo😎👍</p>
+          <p class="time">14:14 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" fill="#00d9ff" class="user-ticks" viewBox="0 0 15 12">
+              <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
+              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/></svg> </p>
+        </div>
+
+        <div class="message">
+          <p class="content">Que onda Leo, estas? Avisame para abrir server</p>
+          <p class="time">15:00</p>
         </div>
 
         <div class="message me">
-          <p class="content">Si, perfecto. ¿A las 18 te viene bien?</p>
-          <p class="time">14:13</p>
-        </div>
-
-        <div class="message me">
-          <p class="content">Si, perfecto. ¿A las 18 te viene bien?</p>
-          <p class="time">14:13</p>
+          <p class="content">Ya estoy, abri el server</p>
+          <p class="time">15:02 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" fill="#00d9ff" class="user-ticks" viewBox="0 0 15 12">
+              <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/>
+              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/></svg></p>
         </div>
       </section>
       <!-- footer texto principal -->
